# bedrock-chat

./: .gitignore  README.md  bin.sh  deploy.yml  pyrightconfig.json
backend/: Dockerfile  README.md  lambda.Dockerfile  pyproject.toml  run.sh
backend/app/: bedrock.py  bot_remove.py  config.py  dependencies.py  main.py  prompt.py  sqs_consumer.py  stream.py  user.py  utils.py  vector_search.py  websocket.py
backend/app/agents/: agent.py  utils.py
backend/app/agents/tools/: agent_tool.py  bedrock_agent.py  internet_search.py  knowledge.py
backend/app/repositories/: bot_store.py  common.py  conversation.py  custom_bot.py  usage_analysis.py  user.py
backend/app/repositories/models/: common.py  conversation.py  custom_bot.py  custom_bot_guardrails.py  custom_bot_kb.py  usage_analysis.py
backend/app/routes/: admin.py  bot.py  bot_store.py  conversation.py  published_api.py  user.py
backend/app/routes/schemas/: admin.py  bot.py  bot_guardrails.py  bot_kb.py  conversation.py  published_api.py
backend/app/usecases/: bot.py  bot_store.py  chat.py  publication.py  user.py
backend/embedding_statemachine/bedrock_knowledge_base/: fetch_stack_output.py  store_knowledge_base_id.py  update_bot_status.py
backend/embedding_statemachine/guardrails/: store_guardrail_arn.py
backend/tests/: test_bedrock.py
backend/tests/test_agent/: test_agent.py
backend/tests/test_repositories/: test_bot_store.py  test_conversation.py  test_custom_bot.py  test_user.py
backend/tests/test_stream/: get_aws_logo.py  get_pdf.py  test_stream.py
backend/tests/test_usecases/: test_bot.py  test_chat.py
backend/tests/test_utils/: test_utils.py
cdk/: cdk.json  (+3 more)
(+454 files in other folders)
